export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "policies": [],
        "properties": {
          "start": 1,
          "query": 6,
          "signal": 8,
          "describe": 10
        },
        "id": [],
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_start_fn",
        "policies": [
          0
        ],
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_start_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "id": [],
        "required": []
      },
      {
        "type": "string",
        "title": "root_start_fn_input_workflow_id_string",
        "policies": []
      },
      {
        "type": "list",
        "title": "root_start_fn_input_args_root_start_fn_input_args_struct_list",
        "policies": [],
        "items": 5
      },
      {
        "type": "object",
        "title": "root_start_fn_input_args_struct",
        "policies": [],
        "properties": {
          "some_field": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "policies": [
          0
        ],
        "input": 7,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "id": [],
        "required": []
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "policies": [
          0
        ],
        "input": 7,
        "output": 9,
        "injections": {
          "workflow_id": {
            "injection": {
              "source": "static",
              "data": {
                "value": "\\\\"1234\\\\""
              }
            }
          }
        },
        "runtimeConfig": null,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "policies": []
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "policies": [
          0
        ],
        "input": 11,
        "output": 12,
        "runtimeConfig": null,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "policies": [],
        "properties": {
          "start_time": 13,
          "close_time": 13,
          "state": 13
        },
        "id": [],
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "policies": [],
        "item": 14,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "policies": []
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host_secret": "<host_secret>",
          "namespace_secret": "<ns_secret>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "policies": [],
        "properties": {
          "startKv": 1,
          "query": 6,
          "signal": 10,
          "describe": 15
        },
        "id": [],
        "required": [
          "startKv",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_startKv_fn",
        "policies": [
          0
        ],
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "id": [],
        "required": []
      },
      {
        "type": "string",
        "title": "root_startKv_fn_input_workflow_id_string",
        "policies": []
      },
      {
        "type": "list",
        "title": "root_startKv_fn_input_args_root_startKv_fn_input_args_struct_list",
        "policies": [],
        "items": 5
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input_args_struct",
        "policies": [],
        "properties": {},
        "id": [],
        "required": []
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "policies": [
          0
        ],
        "input": 7,
        "output": 9,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 8
        },
        "id": [],
        "required": []
      },
      {
        "type": "list",
        "title": "root_query_fn_input_args_root_startKv_fn_input_workflow_id_string_list",
        "policies": [],
        "items": 3
      },
      {
        "type": "optional",
        "title": "root_query_fn_output",
        "policies": [],
        "item": 3,
        "default_value": null
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "policies": [
          0
        ],
        "input": 11,
        "output": 14,
        "runtimeConfig": null,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_signal_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 12
        },
        "id": [],
        "required": []
      },
      {
        "type": "list",
        "title": "root_signal_fn_input_args_root_signal_fn_input_args_struct_list",
        "policies": [],
        "items": 13
      },
      {
        "type": "object",
        "title": "root_signal_fn_input_args_struct",
        "policies": [],
        "properties": {
          "key": 3,
          "value": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "policies": []
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "policies": [
          0
        ],
        "input": 16,
        "output": 17,
        "runtimeConfig": null,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "policies": [],
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "policies": [],
        "properties": {
          "start_time": 18,
          "close_time": 18,
          "state": 18
        },
        "id": [],
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "policies": [],
        "item": 19,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "policies": []
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "keyValueStore"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "getValue"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "setValue"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "test",
          "host_secret": "HOST",
          "namespace_secret": "NAMESPACE"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;
